# R-Type

./: CMakeLists.txt  RFC  RFC.xml  conanfile.txt
ben/client/: Client.cpp  Client.hpp  compil  main.cpp
engine/include/: Components.hpp  Filter.hpp  Storage.hpp  StorageManager.hpp
include/Client/: AEntity.hpp  Alien.hpp  AlienShoot.hpp  Animation.hpp  Audio.hpp  Background.hpp  Bomb.hpp  Client.hpp  ClientState.hpp  Entity.hpp  EntityBuilder.hpp  Explosion.hpp  GifDrawer.hpp  IEntity.hpp  IGraphicLibrary.hpp  ItemSpeed.hpp  MenuDrawer.hpp  Obstacle.hpp  ParallaxShader.hpp  Parser.hpp  Pirate.hpp  PirateShoot.hpp  Player.hpp  PlayerShoot.hpp  Players.hpp  SFMLModule.hpp  Spaceship.hpp  SpaceshipShoot.hpp  TextDrawer.hpp  Ufo.hpp  UfoShoot.hpp  Vector.hpp  Wall.hpp  keyTraducer.hpp  players.hpp
include/Server/: ASystem.hpp  Buffer.hpp  Client.hpp  Components.hpp  DLLoader.hpp  ECSEngine.hpp  EntityManager.hpp  Filter.hpp  GameLoop.hpp  IComponents.hpp  INetwork.hpp  IStorage.hpp  ISystem.hpp  Lobby.hpp  Storage.hpp  StorageManager.hpp  SystemManager.hpp  buffer.hpp  dirReader.hpp  eventSystem.hpp  gameLoop.hpp  movementSystem.hpp  routineSystem.hpp  udpServer.hpp
include/Server/Components/: Bomb.hpp  Dimensions.hpp  Life.hpp  Player.hpp  Position.hpp  Velocity.hpp  entityDetails.hpp
include/Server/Systems/: bombSystem.hpp  collisionSystem.hpp  eventSystem.hpp  monsterSystem.hpp  movementSystem.hpp  routineSystem.hpp  winSystem.hpp
include/Shared/: BinaryProtocol.hpp  Error.hpp  SignalHandler.hpp  entityType.hpp  pathHandler.hpp
include/Shared/Monsters/: AMonster.hpp  entityType.hpp
include/client/: AEntity.hpp  IEntity.hpp  Wall.hpp
ressources/: config_file.txt
ressources/monsters/: CMakeLists.txt  ben
ressources/monsters/include/: AMonster.hpp  IMonster.hpp
ressources/monsters/pirate/: CMakeLists.txt
ressources/monsters/pirate/include/: pirate.hpp
ressources/monsters/pirate/src/: pirate.cpp
ressources/monsters/sample/: CMakeLists.txt
ressources/monsters/sample/include/: sample.hpp
ressources/monsters/sample/src/: sample.cpp
ressources/monsters/spaceship/: CMakeLists.txt
ressources/monsters/spaceship/include/: spaceship.hpp
ressources/monsters/spaceship/src/: spaceship.cpp
ressources/monsters/src/: AMonster.cpp
ressources/monsters/ufo/: CMakeLists.txt
ressources/monsters/ufo/include/: ufo.hpp
ressources/monsters/ufo/src/: ufo.cpp
src/Client/: AEntity.cpp  Alien.cpp  AlienShoot.cpp  Animation.cpp  Audio.cpp  Background.cpp  Bomb.cpp  Client.cpp  Entity.cpp  EntityBuilder.cpp  Explosion.cpp  GifDrawer.cpp  ItemSpeed.cpp  MenuDrawer.cpp  Obstacle.cpp  Parser.cpp  Pirate.cpp  PirateShoot.cpp  Player.cpp  PlayerShoot.cpp  Players.cpp  SFMLModule.cpp  Spaceship.cpp  SpaceshipShoot.cpp  TextDrawer.cpp  Ufo.cpp  UfoShoot.cpp  Wall.cpp  keyTraducer.cpp  main.cpp  parallaxShader.cpp  players.cpp
src/Server/: ASystem.cpp  Buffer.cpp  Client.cpp  ECSEngine.cpp  EntityManager.cpp  Filter.cpp  GameLoop.cpp  Lobby.cpp  StorageManager.cpp  SystemManager.cpp  buffer.cpp  dirReader.cpp  eventSystem.cpp  gameLoop.cpp  main.cpp  movementSystem.cpp  routineSystem.cpp  udpServer.cpp  winSystem.cpp
src/Server/Components/: Bomb.cpp  Player.cpp  Position.cpp  Velocity.cpp  entityDetails.cpp
src/Server/Systems/: bombSystem.cpp  collisionSystem.cpp  eventSystem.cpp  monsterSystem.cpp  movementSystem.cpp  routineSystem.cpp  winSystem.cpp
src/Shared/: BinaryProtocol.cpp  Error.cpp  SignalHandler.cpp  pathHandler.cpp
src/Shared/Monsters/: Error.cpp
tests/: CMakeLists.txt
tests/Server/: testECSEngine.cpp
